# thesis-code

./: .gitignore  2Dof_heli.c  CMakeLists.txt  README_crane_LTV.md  cal_K.py  calculate_P.py  condensedAB.c  crane_2D.c  crane_LTV.c  helicopter_lin.c  helicoptor.c  invert_pendulum.c  invert_pendulum_backup.c  inverted_pendulum_formulation_helpers.c  mpc_pipeline.c  mpc_pipeline_formulation_helpers.c  mpc_pipeline_helpers.c  my_timing.c  pyplot.py  run_2dof.py  run_crane.py  run_pend.py  strobeplot.py  temp.c
include/: inverted_pendulum_config.h  inverted_pendulum_formulation_helpers.h  mpc_pipeline_config.h  mpc_pipeline_formulation_helpers.h  mpc_pipeline_helpers.h  my_timing.h
include/public/: osqp_configure.h
